restrict nfs access to submask via group var #4

--- a/docker-swarm/roles/setup_nfs_server/templates/exports.j2
+++ b/docker-swarm/roles/setup_nfs_server/templates/exports.j2
@@ -1,1 +1,1 @@
-/exports/docker *(rw,sync,no_subtree_check,no_root_squash)
+/exports/docker {{ nfs_restriction }}(rw,sync,no_subtree_check,no_root_squash)
